# src/main/java/org/openapitools/api/PersonalApi.java
@@ -45,7 +45,7 @@ public interface PersonalApi {
     }
 
     /**
-     * GET /personal/assignments/ : get all personal assignments
+     * GET /personnel/assignments/ : get all personal assignments
      *
      * @param employeeId filter for a given employee (optional)
      * @return successful operation (status code 200)
@@ -63,7 +63,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/personal/assignments/",
+        value = "/personnel/assignments/",
         produces = { "application/json" }
     )
     default ResponseEntity<PersonalAssignmentsGet200Response> personalAssignmentsGet(
@@ -84,7 +84,7 @@ public interface PersonalApi {
 
 
     /**
-     * DELETE /personal/assignments/{id}/ : delete an assignment by id
+     * DELETE /personnel/assignments/{id}/ : delete an assignment by id
      *
      * @param id uuid of the assignment (required)
      * @return successful operation (status code 204)
@@ -111,7 +111,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.DELETE,
-        value = "/personal/assignments/{id}/",
+        value = "/personnel/assignments/{id}/",
         produces = { "application/json" }
     )
     default ResponseEntity<Void> personalAssignmentsIdDelete(
@@ -123,7 +123,7 @@ public interface PersonalApi {
 
 
     /**
-     * GET /personal/assignments/{id}/ : get an assignment by id
+     * GET /personnel/assignments/{id}/ : get an assignment by id
      *
      * @param id uuid of the assignment (required)
      * @return successful operation (status code 200)
@@ -145,7 +145,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/personal/assignments/{id}/",
+        value = "/personnel/assignments/{id}/",
         produces = { "application/json" }
     )
     default ResponseEntity<Assignment> personalAssignmentsIdGet(
@@ -166,7 +166,7 @@ public interface PersonalApi {
 
 
     /**
-     * PUT /personal/assignments/{id}/ : add or update an assignment by id
+     * PUT /personnel/assignments/{id}/ : add or update an assignment by id
      * if an id is supplied in the object, it MUST mach with the one in the url
      *
      * @param id uuid of the assignment (required)
@@ -202,7 +202,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.PUT,
-        value = "/personal/assignments/{id}/",
+        value = "/personnel/assignments/{id}/",
         produces = { "application/json" },
         consumes = { "application/json" }
     )
@@ -216,7 +216,7 @@ public interface PersonalApi {
 
 
     /**
-     * POST /personal/assignments/ : add a new assignment
+     * POST /personnel/assignments/ : add a new assignment
      * MAY contain a uuid. If so, this method does the same checks as &#x60;PUT&#x60; does.
      *
      * @param assignment  (required)
@@ -258,7 +258,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.POST,
-        value = "/personal/assignments/",
+        value = "/personnel/assignments/",
         produces = { "application/json" },
         consumes = { "application/json" }
     )
@@ -280,7 +280,7 @@ public interface PersonalApi {
 
 
     /**
-     * GET /personal/employees/ : get all employees
+     * GET /personnel/employees/ : get all employees
      *
      * @return successful operation (status code 200)
      */
@@ -296,7 +296,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/personal/employees/",
+        value = "/personnel/employees/",
         produces = { "application/json" }
     )
     default ResponseEntity<PersonalEmployeesGet200Response> personalEmployeesGet(
@@ -317,7 +317,7 @@ public interface PersonalApi {
 
 
     /**
-     * DELETE /personal/employees/{id}/ : delete an employee by id
+     * DELETE /personnel/employees/{id}/ : delete an employee by id
      *
      * @param id uuid of the employee (required)
      * @return successful operation (status code 204)
@@ -347,7 +347,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.DELETE,
-        value = "/personal/employees/{id}/",
+        value = "/personnel/employees/{id}/",
         produces = { "application/json" }
     )
     default ResponseEntity<Void> personalEmployeesIdDelete(
@@ -359,7 +359,7 @@ public interface PersonalApi {
 
 
     /**
-     * GET /personal/employees/{id}/ : get an employee by id
+     * GET /personnel/employees/{id}/ : get an employee by id
      *
      * @param id uuid of the employee (required)
      * @return successful operation (status code 200)
@@ -380,7 +380,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/personal/employees/{id}/",
+        value = "/personnel/employees/{id}/",
         produces = { "application/json" }
     )
     default ResponseEntity<Employee> personalEmployeesIdGet(
@@ -401,7 +401,7 @@ public interface PersonalApi {
 
 
     /**
-     * PUT /personal/employees/{id}/ : add or update an employee by id
+     * PUT /personnel/employees/{id}/ : add or update an employee by id
      * if an id is supplied in the object, it MUST mach with the one in the url
      *
      * @param id uuid of the employee (required)
@@ -433,7 +433,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.PUT,
-        value = "/personal/employees/{id}/",
+        value = "/personnel/employees/{id}/",
         produces = { "application/json" },
         consumes = { "application/json" }
     )
@@ -447,7 +447,7 @@ public interface PersonalApi {
 
 
     /**
-     * POST /personal/employees/ : add a new employee
+     * POST /personnel/employees/ : add a new employee
      * MAY contain a uuid. If so, this method does the same checks as &#x60;PUT&#x60; does.
      *
      * @param employee  (required)
@@ -480,7 +480,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.POST,
-        value = "/personal/employees/",
+        value = "/personnel/employees/",
         produces = { "application/json" },
         consumes = { "application/json" }
     )
@@ -502,7 +502,7 @@ public interface PersonalApi {
 
 
     /**
-     * GET /personal/status/ : returns information about the backend-service and status
+     * GET /personnel/status/ : returns information about the backend-service and status
      *
      * @return successful operation (status code 200)
      */
@@ -518,7 +518,7 @@ public interface PersonalApi {
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/personal/status/",
+        value = "/personnel/status/",
         produces = { "application/json" }
     )
     default ResponseEntity<PersonalStatusGet200Response> personalStatusGet(
